# Custom-Database-System

./: CHANGELOG.md  CMakeLists.txt  README.md
src/: BaseDatos.cpp  BaseDatos.h  Dato.cpp  Restriccion.cpp  Restriccion.h  utils.h
tests/: baseDatos_test.cpp  custom_test.cpp  restriccion_test.cpp
